--- a/views/index.erb
+++ b/views/index.erb
@@ -1,19 +1,289 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <title>MASTERMIND</title>
-    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed:700" rel="stylesheet">
   </head>
   <body>
-    <style>
-      body {
-        font-family: 'Encode Sans Condensed', sans-serif;
-        background: #FFFFFF;
-        text-align: left;
-        white-space: pre-line;
-        font-size: 24px;
-      }
-    </style>
-    <form>
+    <h1 class="title">MASTERMIND</h1>
+    <a href="https://en.wikipedia.org/wiki/Mastermind_(board_game)#Gameplay_and_rules" class="how-to-play" target="_blank">How to Play</a><br>
+    <table id="game_board">
+      <tr>
+        <td class="colored_pegs">
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+        </td>
+        <td class="bw_pegs">
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+        </td>
+      </tr>
+      <tr>
+        <td class="colored_pegs">
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+        </td>
+        <td class="bw_pegs">
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+        </td>
+      </tr>
+      <tr>
+        <td class="colored_pegs">
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+        </td>
+        <td class="bw_pegs">
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+        </td>
+      </tr>
+      <tr>
+        <td class="colored_pegs">
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+        </td>
+        <td class="bw_pegs">
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+        </td>
+      </tr>
+      <tr>
+        <td class="colored_pegs">
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+        </td>
+        <td class="bw_pegs">
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+        </td>
+      </tr>
+      <tr>
+        <td class="colored_pegs">
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+        </td>
+        <td class="bw_pegs">
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+        </td>
+      </tr>
+      <tr>
+        <td class="colored_pegs">
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+        </td>
+        <td class="bw_pegs">
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+        </td>
+      </tr>
+      <tr>
+        <td class="colored_pegs">
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+        </td>
+        <td class="bw_pegs">
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+        </td>
+      </tr>
+      <tr>
+        <td class="colored_pegs">
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+        </td>
+        <td class="bw_pegs">
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+        </td>
+      </tr>
+      <tr>
+        <td class="colored_pegs">
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+        </td>
+        <td class="bw_pegs">
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+        </td>
+      </tr>
+      <tr>
+        <td class="colored_pegs">
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+        </td>
+        <td class="bw_pegs">
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+        </td>
+      </tr>
+      <tr>
+        <td class="colored_pegs">
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+          <span class="display_peg"></span>
+        </td>
+        <td class="bw_pegs">
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+          <span class="feedback_peg"></span>
+        </td>
+      </tr>
+    </table>
+    <h1>Enter your guess:</h1>
+    <form action="/" method="post">
+      <div class="peg-selector">
+        <label class="container">
+          <input type="radio" name="first-peg">
+          <span class="red peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="first-peg">
+          <span class="blue peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="first-peg">
+          <span class="cyan peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="first-peg">
+          <span class="magenta peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="first-peg">
+          <span class="yellow peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="first-peg">
+          <span class="green peg"></span>
+        </label>
+      </div>
+      <div class="peg-selector">
+        <label class="container">
+          <input type="radio" name="second-peg">
+          <span class="red peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="second-peg">
+          <span class="blue peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="second-peg">
+          <span class="cyan peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="second-peg">
+          <span class="magenta peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="second-peg">
+          <span class="yellow peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="second-peg">
+          <span class="green peg"></span>
+        </label>
+       </div>
+       <div class="peg-selector">
+        <label class="container">
+          <input type="radio" name="third-peg">
+          <span class="red peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="third-peg">
+          <span class="blue peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="third-peg">
+          <span class="cyan peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="third-peg">
+          <span class="magenta peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="third-peg">
+          <span class="yellow peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="third-peg">
+          <span class="green peg"></span>
+        </label>
+      </div>
+      <div class="peg-selector">
+        <label class="container">
+          <input type="radio" name="fourth-peg">
+          <span class="red peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="fourth-peg">
+          <span class="blue peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="fourth-peg">
+          <span class="cyan peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="fourth-peg">
+          <span class="magenta peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="fourth-peg">
+          <span class="yellow peg"></span>
+        </label>
+        <label class="container">
+          <input type="radio" name="fourth-peg">
+          <span class="green peg"></span>
+        </label>
+      </div>
+      <br><input class="submit-button" type="submit" value="Guess!"/>
     </form>
   </body>
 </html>
