changed erb template to display the current game board with escaped HTML tags

--- a/public/style.css
+++ b/public/style.css
@@ -190,6 +190,14 @@ form {
 	background-color: green;
 }
 
+.black {
+  background-color: black;
+}
+
+.white {
+  background-color: white;
+}
+
 /* The feedback window. */
 
 .feedback_window {
