--- a/views/index.erb
+++ b/views/index.erb
@@ -10,47 +10,47 @@
     <a href="https://en.wikipedia.org/wiki/Mastermind_(board_game)#Gameplay_and_rules" class="how-to-play" target="_blank">How to Play</a><br>
     <div id="game_container">
       <table id="game_board">
-        <%  @colored_pegs.each_with_index do |row, i| %>
+        <%  colored_pegs.each_with_index do |row, i| %>
 
-          <%= h "<tr>" %>
+          <tr>
 
-            <%= h "<td class='colored_pegs'>" %>
+            <td class='colored_pegs'>
               <% row.each do |peg| %>
                 <% color = peg.to_s %>
-                <%= h "<span class='display_peg #{color}'></span>" %>
+                <span class="display_peg <%= color %>"></span>
               <% end %>
-            <%= h "</td>" %>
+            </td>
 
-            <%= h "<td class='bw_pegs'>" %>
-              <% this_bw_row = @black_white_pegs[i] %>
+            <td class='bw_pegs'>
+              <% this_bw_row = black_white_pegs[i] %>
               <% this_bw_row.each do |peg| %>
                 <% color = peg.to_s %>
-                <%= h "<span class='feedback_peg #{color}'></span>" %>
+                <span class="feedback_peg <%= color %>"></span>
               <% end %>
-            <%= h "</td>" %>
+            </td>
 
-          <%= h "</tr>" %>
+          </tr>
 
         <% end %>
 
-        <% current_row = @colored_pegs.length %>
+        <% current_row = colored_pegs.length %>
         <% until current_row == 12 %>
 
-          <%= h "<tr>" %>
+          <tr>
 
-            <%= h "<td class='colored_pegs'>" %>
+            <td class='colored_pegs'>
               <% 4.times do %>
-                <%= h "<span class='display_peg'></span>" %>
+                <span class='display_peg'></span>
               <% end %>
-            <%= h "</td>" %>
+            </td>
 
-            <%= h "<td class='bw_pegs'>" %>
+            <td class='bw_pegs'>
               <% 4.times do %>
-                <%= h "<span class='feedback_peg'></span>" %>
+                <span class='feedback_peg'></span>
               <% end %>
-            <%= h "</td>" %>
+            </td>
 
-          <%= h "</tr>" %>
+          </tr>
 
         <% current_row += 1 %>
         <% end %>
