refactored index.erb to loop peg display logic in the guess entry form

--- a/public/style.css
+++ b/public/style.css
@@ -77,12 +77,13 @@ form {
 
 /* Black/white feedback pegs for each guess. */
 .feedback_peg {
-  height: 8px;
-  width: 8px;
+  height: 6px;
+  width: 6px;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
   margin: 4px 3px;
+  border: 1px solid grey;
 }
 
 .bw_pegs {
