--- a/views/defeat_screen.erb
+++ b/views/defeat_screen.erb
@@ -3,9 +3,9 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/style.css">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <title>Game Over!</title>
+    <title>Defeat!</title>
   </head>
   <body>
-    <h1> GAME OVER! Try again! </h1>
+    <h1 class="title">DEFEAT! Try again!</h1>
   </body>
 </html>
