--- a/views/victory_screen.erb
+++ b/views/victory_screen.erb
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/style.css">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <title>Game Over!</title>
+    <title>Victory!</title>
   </head>
   <body>
     <h1> Great Job! You win! </h1>
