--- a/views/victory_screen.erb
+++ b/views/victory_screen.erb
@@ -13,7 +13,8 @@
       <table id="postgame_info">
         
         <tr>
-          <td class="game_over_message"> You cracked the code in <%= turn %> turns! </td>
+          <td class="game_over_message"> You cracked the code </td>
+          <td class="game_over_message"> in <%= turn %> turns! </td>
         </tr>
         
         <tr>
@@ -25,7 +26,7 @@
           </td>
         </tr>
         
-      </table><br>
+      </table>
       
       <table id="game_board">
         <%  colored_pegs.each_with_index do |row, i| %>
@@ -52,8 +53,8 @@
         <% end %>
       </table>
       
-      <form action="/new_game" method="post">
-        <input class="submit-button new_game" type="submit" value="Play again!"/>
+      <form class="new_game" action="/new_game" method="post">
+        <input class="submit-button" type="submit" value="Play again!"/>
       </form>
     </div>
     
