--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1 class="title">MASTERMIND</h1>
-    <a href="https://en.wikipedia.org/wiki/Mastermind_(board_game)#Gameplay_and_rules" class="how-to-play" target="_blank">How to Play</a><br>
+    <div class="how-to-play">How to Play</div><br>
     
     <div id="game_container">
       
@@ -60,7 +60,7 @@
       
       <form class="entry_field" action="/" method="post">
         
-        <h2 class="enter_your_guess">Enter your guess:</h2> 
+        <h2 class="enter_your_guess">Enter your guess:</h2>
         
         <% input_pegs = ["first-peg", "second-peg", "third-peg", "fourth-peg"] %>
         <% peg_colors = ["red", "blue", "cyan", "magenta", "yellow", "green"] %>
