--- a/views/victory_screen.erb
+++ b/views/victory_screen.erb
@@ -13,8 +13,7 @@
       <table id="postgame_info">
         
         <tr>
-          <td class="game_over_message"> You cracked the code </td>
-          <td class="game_over_message"> in <%= turn %> turns! </td>
+          <td class="game_over_message"> You cracked the code in <%= turn %> turns! </td>
         </tr>
         
         <tr>
